feat: add support for room-specific webhooks
Signed-off-by: Michael Chekin <mchekin@gmail.com>